<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">9Face</string>
    <string name="back">返回</string>
    <string name="main_title">DIY贴纸</string>
    <string name="process">处理中</string>
    <string name="Save">保存</string>
    <string name="saving_succeed">保存完成</string>
    <string name="share">分享请打开：</string>
    <string name="hint">请按1-9的顺序分享这些图片</string>
    <string name="save_or_share">保存/分享</string>
    <string name="the_description_of_the_effect">The model shows</string>
    <string name="the_imageview_of_putting_models">the imageview of putting models</string>
    <string name="templet_effect_show">展示切图效果的图</string>
    <string name="the_sudoku">九宫格的图</string>
    <string name="pick_photo_from_gallery">pick photo from gallery</string>
    <string name="pick_photo_using_camera">pick photo using camera</string>
    <string name="main_gallery">相册</string>
    <string name="main_camera">相机</string>
    <string name="face_text_hint">人脸识别提示</string>
    <string name="choose_right_face">请选择正面大头照</string>
    <string name="choose_photo_again">重选照片</string>
    <string name="take_photo_again">重新自拍</string>
    <string name="not_suggested">不建议以下姿势或者状态</string>
    <string name="down_face">仰头或低头</string>
    <string name="left_face">侧脸人像</string>
    <string name="glass_face">五官遮挡</string>
    <string name="dark_face">脸部过暗</string>

    <!-- 安装包升级 -->
    <string name="serverurl">http://api.loftcam.netease.com/Server/version.check?sys=Android_Phone&amp;pro=9face</string>
    <!-- <string name="serverurl">http://www.baidu.com</string> -->
    <string name="updatetitle">"9Face版本升级提示"</string>
    <string name="updatemessage">"9Face v1.0 正式版本已发布，请更新体验。"</string>
    <string name="doupdate">立刻升级</string>
    <string name="notupdate">稍后提示</string>
    <string name="insert_card">插入卡</string>
    <string name="down_fail">下载失败</string>
    <string name="is_downing">正在下载</string>
    <string name="down_sucess">下载成功</string>

    <!-- 小米推送 -->
    <string name="reset">已暂停推送, 点此重新启用</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="log">日志</string>
    <string name="settings">设置</string>
    <string name="set_alias">设置别名</string>
    <string name="unset_alias">撤销别名</string>
    <string name="subscribe_topic">订阅标签</string>
    <string name="unsubscribe_topic">撤销标签</string>
    <string name="set_env">设置环境</string>
    <string name="set_accept_time">设置时间</string>
    <string name="pause_push">暂停推送</string>
    <string name="current_env">当前环境：%s</string>
    <string name="official_env">线上环境</string>
    <string name="sandbox_env">沙箱环境</string>
    <string name="register_success">Register push success.</string>
    <string name="register_fail">Register push fail.</string>
    <string name="recv_message"> Receive a message. Content is \"%1$s\"</string>
    <string name="set_alias_success"> Set alias \"%1$s\" success.</string>
    <string name="set_alias_fail"> Set alias fail for %1$s.</string>
    <string name="unset_alias_success"> Unset alias \"%1$s\" success.</string>
    <string name="unset_alias_fail"> Unset alias fail for %1$s.</string>
    <string name="subscribe_topic_success"> Subscribe topic \"%1$s\" success.</string>
    <string name="subscribe_topic_fail"> Subscribe topic fail for %1$s.</string>
    <string name="unsubscribe_topic_success"> Unsubscribe topic \"%1$s\" success.</string>
    <string name="unsubscribe_topic_fail"> Unsubscribe topic fail for %1$s.</string>
    <string name="set_accept_time_success"> Set accept time %1$s - %2$s success.</string>
    <string name="set_accept_time_fail"> Set accept time fail for %1$s.</string>
    <string name="about_share">把祝福与亲朋好友分享：</string>
    <string name="about_comment">有任何问题或建议,</string>
    <string name="about_qq">欢迎加入官方QQ群:103262891</string>
    <string name="about_instruction">网易多媒体联合LOFTER出品©2015</string>
    <string name="about_Propaganda">玩出你的节日祝福</string>
    <string name="save_button">保存图片的按钮</string>

</resources>