<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_background" >

    <ImageView
        android:layout_width="254dp"
        android:layout_height="255dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="112dp"
        android:background="@drawable/main_logo" />

    <ImageView
        android:layout_width="123dp"
        android:layout_height="100dp"
        android:layout_gravity="right"
        android:layout_marginRight="53.5dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/main_warning" />

    <LinearLayout
        android:id="@+id/llChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="58dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/pickImageBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/pick_photo_from_gallery"
                android:src="@drawable/btn_main_gallery" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/main_gallery"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/openCameraBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_main_camera"
                android:contentDescription="@string/pick_photo_using_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/main_camera"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="right"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/main_detail" />
    </LinearLayout>

</FrameLayout>