<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <include
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        layout="@layout/common_title" />

    <TextView
        android:id="@+id/tvSaveSucceed"
        android:layout_width="196dp"
        android:layout_height="42dp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/save_complete" />

    <LinearLayout
        android:id="@+id/llShare"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSaveSucceed"
        android:layout_marginTop="32.5dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/share"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21.5dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvWeChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/save_wechat_logo"
                    android:gravity="center" />

                <ImageView
                    android:id="@+id/ivWeChat"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/save_wechat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvWeibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/save_weibo_logo" />

                <ImageView
                    android:id="@+id/ivWeibo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/save_weibo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvYiXin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/save_yixin_logo"
                    android:gravity="center" />

                <ImageView
                    android:id="@+id/ivYiXin"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/save_yixin" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDemostration"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/llShare"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvHint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hint" />

        <FrameLayout
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/ivHintShow"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/templet_effect_show"
                android:scaleType="centerInside" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/the_sudoku"
                android:scaleType="centerInside"
                android:src="@drawable/save_guide_display" />
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>